--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -495,6 +495,7 @@
     "stackedLabel": "Stacked",
     "heatmapLabel": "Heatmap",
     "geomapLabel": "GeoMap",
+    "worldmapLabel": "Maps",
     "hstackedLabel": "H-Stacked",
     "pieLabel": "Pie",
     "donutLabel": "Donut",
