--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -605,6 +605,8 @@
     "latitude": "Latitude",
     "longitude": "Longitude",
     "weight": "Weight",
+    "mapname": "Name",
+    "mapvalue": "Value",
     "source": "Source",
     "target": "Target",
     "value": "Value"
