add: added add stream button

--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -360,7 +360,8 @@
     "labelAll": "All",
     "labelLogs": "Logs",
     "labelMetrics": "Metrics",
-    "labelTraces": "Traces"
+    "labelTraces": "Traces",
+    "add": "Add Stream"
   },
   "function": {
     "header": "Functions",
