fix: replaced checkbox in stream details with select

--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -364,7 +364,8 @@
     "add": "Add Stream",
     "dataRetention": "Data Retention (in days)",
     "indexing": "Indexing",
-    "createStream": "Create Stream"
+    "createStream": "Create Stream",
+    "indexType": "Index Type"
   },
   "function": {
     "header": "Functions",
