--- a/web/src/locales/languages/en.json
+++ b/web/src/locales/languages/en.json
@@ -463,6 +463,7 @@
     "goBackToDashboard": "Go back to dashboard",
     "import": "Import",
     "setting": "Dashboard Settings",
+    "print": "Print Dashboard",
     "refresh": "Refresh",
     "export": "Export Dashboard",
     "share": "Share",
